# circlenetic-wgpu-rs

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs  main.rs
src/examples/ndarray-example/: main.rs
src/examples/nn-example/: main.rs
src/examples/opencl-example/: main.rs
