[package]
name = "circlenetic-wgpu-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "circlenetic-wgpu-rs"  # Fixed typo here
path = "src/main.rs"

[dependencies]
burn = { version = "0.15.0", features = ["wgpu", "autodiff"] }
wgpu = "0.19"
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }