[package]
name = "circlenetic-wgpu-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "circlenetic-wgpu-rs"
path = "src/main.rs"

[[example]]
name = "webgpu-example"
path = "src/examples/webgpu-example/main.rs"

[[example]]
name = "ndarray-example"
path = "src/examples/ndarray-example/main.rs"

[dependencies]
burn = { version = "0.15.0", features = ["wgpu", "ndarray", "autodiff"] }
wgpu = "23.0.1"
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
